[package]
name = "auth0"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"
description = "Auth0 API library"
homepage = "https://github.com/davisvansant/auth0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "authentication" ]
management_api = [ "management" ]

[dependencies]
authentication = { path = "./authentication", optional = true }
management = { path = "./management", optional = true }

[workspace]

members = [
  "authentication",
  "management"
]
