[package]
name = "auth0"
version = "0.3.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2021"
description = "Auth0 API library"
homepage = "https://github.com/davisvansant/auth0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"], default-features = false }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros"] }
mockito = { version = "1.3.1", default-features = false }

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
default-tls = ["reqwest/default-tls"]
